engine-net-2/examples/Errors/UserMethodsOnlyAvailableForInheritanceTypesCompiled.grs
new graph "UserMethodsOnlyAvailableForInheritanceTypesCompiled.grg"

quit
